[gd_scene load_steps=57 format=3 uid="uid://l5lkp5yy3b20"]

[ext_resource type="Script" path="res://scripts/echo.gd" id="1_yj31d"]
[ext_resource type="Texture2D" uid="uid://btv67fxt3gvf3" path="res://assets/sprites/character/EchoSpritesheetBeta.png" id="2_j7mbw"]
[ext_resource type="Texture2D" uid="uid://clg5el3htqy44" path="res://assets/sprites/casting/Earth.png" id="3_k3qc7"]
[ext_resource type="Texture2D" uid="uid://bb1xdvnxgej31" path="res://assets/sprites/casting/Water Effect and Bullet 16x16.png" id="3_v8dir"]
[ext_resource type="Texture2D" uid="uid://cdr430oh8005q" path="res://assets/sprites/casting/Fire slash sprite.png" id="3_x35eh"]
[ext_resource type="AudioStream" uid="uid://c5v63qm6mv3m7" path="res://assets/audio/FireSlash.mp3" id="4_g3xbk"]
[ext_resource type="Texture2D" uid="uid://mc7hwc0rdwcn" path="res://assets/sprites/casting/WaterWall.png" id="4_rxo5s"]
[ext_resource type="AudioStream" uid="uid://bvlvd0ypchk0c" path="res://assets/audio/rocksound.mp3" id="5_adel0"]
[ext_resource type="AudioStream" uid="uid://yyc4mkjnw0th" path="res://assets/audio/RetroJump.mp3" id="6_dl45f"]
[ext_resource type="Texture2D" uid="uid://chve3og63y4oj" path="res://assets/sprites/casting/Cloud.png" id="7_qbw2w"]
[ext_resource type="AudioStream" uid="uid://du64re8djojgd" path="res://assets/audio/AirJumpWhoosh.mp3" id="8_me835"]
[ext_resource type="AudioStream" uid="uid://5loceel540sj" path="res://assets/audio/water-splash-type-4-265467.mp3" id="9_86l8x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qrdax"]
atlas = ExtResource("2_j7mbw")
region = Rect2(200, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5h8b"]
atlas = ExtResource("2_j7mbw")
region = Rect2(250, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4wrd"]
atlas = ExtResource("2_j7mbw")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_efuyk"]
atlas = ExtResource("2_j7mbw")
region = Rect2(150, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib2vf"]
atlas = ExtResource("2_j7mbw")
region = Rect2(200, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvv8f"]
atlas = ExtResource("2_j7mbw")
region = Rect2(250, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpajk"]
atlas = ExtResource("2_j7mbw")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf0r4"]
atlas = ExtResource("2_j7mbw")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_28nyh"]
atlas = ExtResource("2_j7mbw")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_2edts"]
atlas = ExtResource("2_j7mbw")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_au86d"]
atlas = ExtResource("2_j7mbw")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_203tn"]
atlas = ExtResource("2_j7mbw")
region = Rect2(100, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_k886e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrdax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5h8b")
}],
"loop": true,
"name": &"cast",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4wrd")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_efuyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib2vf")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_ib2vf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvv8f")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpajk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf0r4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28nyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2edts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au86d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_203tn")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2nvop"]
size = Vector2(15.6667, 17.6667)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr054"]
atlas = ExtResource("3_k3qc7")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q44ma"]
atlas = ExtResource("3_k3qc7")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsfkr"]
atlas = ExtResource("3_k3qc7")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_br155"]
atlas = ExtResource("3_k3qc7")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_740dd"]
atlas = ExtResource("3_k3qc7")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mjr6"]
atlas = ExtResource("3_k3qc7")
region = Rect2(16, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_a8h5c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr054")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q44ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsfkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br155")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_740dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mjr6")
}],
"loop": true,
"name": &"earth",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_f34xf"]
atlas = ExtResource("3_v8dir")
region = Rect2(165, 49, 14, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g372"]
atlas = ExtResource("3_v8dir")
region = Rect2(179, 49, 14, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_opyr0"]
atlas = ExtResource("3_v8dir")
region = Rect2(193, 49, 14, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro3av"]
atlas = ExtResource("4_rxo5s")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_034bs"]
atlas = ExtResource("4_rxo5s")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o10mc"]
atlas = ExtResource("4_rxo5s")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b6ay"]
atlas = ExtResource("4_rxo5s")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5t3e"]
atlas = ExtResource("4_rxo5s")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7ogl"]
atlas = ExtResource("4_rxo5s")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cvafy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f34xf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g372")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opyr0")
}],
"loop": true,
"name": &"water",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro3av")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_034bs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o10mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b6ay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5t3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7ogl")
}],
"loop": true,
"name": &"waterwall",
"speed": 9.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_y1o48"]
atlas = ExtResource("3_x35eh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfkuo"]
atlas = ExtResource("3_x35eh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5swwm"]
atlas = ExtResource("3_x35eh")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iykai"]
atlas = ExtResource("3_x35eh")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_f6y3w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1o48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfkuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5swwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iykai")
}],
"loop": true,
"name": &"fire",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_x6nvg"]
atlas = ExtResource("7_qbw2w")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0jao"]
atlas = ExtResource("7_qbw2w")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3syq6"]
atlas = ExtResource("7_qbw2w")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xatn1"]
atlas = ExtResource("7_qbw2w")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydf00"]
atlas = ExtResource("7_qbw2w")
region = Rect2(0, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_o1vqt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6nvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0jao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3syq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xatn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydf00")
}],
"loop": true,
"name": &"air",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_14pb7"]
size = Vector2(65, 106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bayfr"]
size = Vector2(109, 126)

[node name="Echo" type="CharacterBody2D"]
script = ExtResource("1_yj31d")

[node name="Echo" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-21, 34)
scale = Vector2(3.48953, 3.16)
sprite_frames = SubResource("SpriteFrames_k886e")
animation = &"run"
frame = 3
frame_progress = 0.0701455

[node name="RunCol" type="CollisionShape2D" parent="."]
position = Vector2(-14, 40)
scale = Vector2(6, 6)
shape = SubResource("RectangleShape2D_2nvop")

[node name="Earth" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(95, 35)
scale = Vector2(4.625, 9.5625)
sprite_frames = SubResource("SpriteFrames_a8h5c")
animation = &"earth"
frame = 5
frame_progress = 0.527241

[node name="Water" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(140, 19)
scale = Vector2(4.625, 10.25)
sprite_frames = SubResource("SpriteFrames_cvafy")
animation = &"waterwall"
frame_progress = 0.0143546

[node name="Fire" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(90, 45)
scale = Vector2(5.25, 5.59375)
sprite_frames = SubResource("SpriteFrames_f6y3w")
animation = &"fire"
frame = 1
frame_progress = 0.858872
speed_scale = 2.0

[node name="air" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(-42, 92)
scale = Vector2(3.93359, 3.5)
sprite_frames = SubResource("SpriteFrames_o1vqt")
animation = &"air"
frame = 3
frame_progress = 0.350526

[node name="fireslash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_g3xbk")

[node name="rocksound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_adel0")

[node name="jumpsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_dl45f")
volume_db = -15.353

[node name="airsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_me835")

[node name="watersound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_86l8x")

[node name="Echo_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Echo_hitbox"]
position = Vector2(-3.5, 40)
shape = SubResource("RectangleShape2D_14pb7")

[node name="Ability_hitbox" type="Area2D" parent="."]
position = Vector2(46, 29)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ability_hitbox"]
position = Vector2(34.5, 6)
shape = SubResource("RectangleShape2D_bayfr")

[connection signal="area_entered" from="Echo_hitbox" to="." method="_on_echo_hitbox_area_entered"]
